find, findById, Post and Put using Spring data JPA